--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+    overflow-x:hidden;
 }
 nav
 {
